01-netflix-clone-k8s-devsecops/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netflix-clone
  labels:
    app: netflix-clone
spec:
  replicas: 3
  selector:
    matchLabels:
      app: netflix-clone
  template:
    metadata:
      labels:
        app: netflix-clone
    spec:
      containers:
        - name: netflix-clone
          image: dockerhub-user/netflix-clone:COMMIT_SHA
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 1Gi
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 15
            failureThreshold: 5
      imagePullSecrets:
        - name: dockerhub-credentials
