01-netflix-clone-k8s-devsecops/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netflix-clone
  labels:
    app: netflix-clone
spec:
  type: ClusterIP
  selector:
    app: netflix-clone
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
