01-netflix-clone-k8s-devsecops/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netflix-clone
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "false"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - netflix.example.com
      secretName: netflix-clone-tls
  rules:
    - host: netflix.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: netflix-clone
                port:
                  number: 80
